<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.Fragments.Settings.Settings" >

    <LinearLayout
        android:id="@+id/settingIcons"
        android:layout_width="0dp"

        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"

        android:layout_marginTop="32dp"

        android:layout_weight="1"

        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <CheckBox
                    android:id="@+id/musicToggle"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_weight="1"

                    android:background="@drawable/bg_music_toggle"
                    android:button="@color/transparent"
                    android:checked="true"

                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/musicToggleText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="5dp"

                    android:fontFamily="@font/toyz"
                    android:text="@string/text_music_toggle"
                    android:textColor="@color/black"
                    android:textSize="@dimen/smallText"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/musicToggle" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <CheckBox
                    android:id="@+id/soundToggle"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_weight="1"

                    android:background="@drawable/bg_speaker_toggle"
                    android:button="@color/transparent"
                    android:checked="true"

                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/soundToggleText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="5dp"

                    android:fontFamily="@font/toyz"
                    android:text="@string/text_sound_toggle"
                    android:textColor="@color/black"
                    android:textSize="@dimen/smallText"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/soundToggle" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <CheckBox
                    android:id="@+id/vibrationToggle"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_weight="1"

                    android:background="@drawable/bg_vibration_toggle"
                    android:button="@color/transparent"
                    android:checked="true"

                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/vibrationToggleText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="5dp"

                    android:fontFamily="@font/toyz"
                    android:text="@string/text_vibration_toggle"
                    android:textColor="@color/black"
                    android:textSize="@dimen/smallText"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/vibrationToggle" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

        <ImageView
            android:id="@+id/line"

            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"

            android:src="@drawable/line_3" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settingPanel"
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:layout_margin="24dp"

        android:background="@drawable/bg_rounded"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settingIcons">


        <LinearLayout
            android:id="@+id/volumeSlider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_margin="20dp"


            android:orientation="vertical"


            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/volumeSeekText"

                style="@style/textStyleBlack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginBottom="8dp"

                android:text="@string/text_volume_seek" />

            <SeekBar
                android:id="@+id/volumeSeek"

                android:layout_width="match_parent"
                android:layout_height="0dp"

                android:layout_weight="1"

                android:indeterminate="false"
                android:max="100"
                android:progress="0"

                android:paddingStart="13dp"
                android:paddingEnd="13dp"

                android:progressDrawable="@drawable/bg_seek_track"
                android:thumb="@drawable/bg_thumb" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/targetADs"

            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="15dp"

            android:orientation="horizontal"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/volumeSlider">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/targetAdsSwitch"

                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_weight="1"

                app:track="@drawable/bg_switch_track"
                android:thumb="@drawable/bg_switch_thumb"

                style="@style/textStyleBlack"
                android:text="@string/text_target_ad"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/themeAppSwitch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="15dp"

            android:orientation="horizontal"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/targetADs">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/themeSwitch"

                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_weight="1"

                app:track="@drawable/bg_switch_track"
                android:thumb="@drawable/bg_switch_thumb"

                style="@style/textStyleBlack"
                android:text="@string/text_app_theme" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttons"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"


            android:layout_marginBottom="20dp"
            android:orientation="vertical"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/themeAppSwitch"

            app:layout_constraintVertical_bias="1.0">

            <Button
                android:id="@+id/rateButton"
                style="@style/textButtonStyle"
                android:layout_width="match_parent"

                android:layout_height="wrap_content"

                android:layout_marginBottom="15dp"
                android:layout_marginHorizontal="20dp"

                android:drawableEnd="@drawable/ic_star"

                android:scaleType="center"
                android:text="@string/text_rate_us" />

            <Button
                android:id="@+id/supportButton"
                style="@style/textButtonStyle"
                android:layout_width="match_parent"

                android:layout_height="wrap_content"

                android:layout_marginBottom="15dp"
                android:layout_marginHorizontal="20dp"


                android:drawableEnd="@drawable/ic_coin"

                android:scaleType="center"
                android:text="@string/text_support_us" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="horizontal">

                <Button
                    android:id="@+id/faqButton"
                    style="@style/textButtonStyle"
                    android:layout_width="match_parent"

                    android:layout_height="match_parent"

                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"


                    android:layout_weight="1"

                    android:scaleType="center"

                    android:text="@string/text_FAQ" />

                <Button
                    android:id="@+id/authorsButton"
                    style="@style/textButtonStyle"
                    android:layout_width="match_parent"

                    android:layout_height="match_parent"

                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"

                    android:layout_weight="1"

                    android:scaleType="center"
                    android:text="@string/text_authors"
                    android:textSize="16sp" />


            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>