<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.Activities.MemoryGameActivity.MemoryGameActivity">

    <LinearLayout
        android:id="@+id/gameHeader"

        android:layout_width="0dp"
        android:layout_height="64dp"

        android:background="@color/app_accent"

        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"

            android:gravity="center"

            android:orientation="vertical"

            >

            <TextView
                android:id="@+id/textView2"
                style="@style/textStyleWhiteOutline"
                android:layout_width="match_parent"

                android:layout_height="wrap_content"

                android:gravity="center"
                android:text="@string/text_game_header_time"
                android:textSize="@dimen/smallText" />

            <TextView
                android:id="@+id/time"
                style="@style/textStyleWhiteOutline"
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"

                android:fontFamily="@font/woodstick"
                android:gravity="center"
                android:text="99:99"
                android:textSize="@dimen/text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"

            android:gravity="center"

            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                style="@style/textStyleWhiteOutline"
                android:layout_width="match_parent"

                android:layout_height="wrap_content"

                android:gravity="center"
                android:text="@string/text_game_header_time_left"
                android:textSize="@dimen/smallText" />

            <TextView
                android:id="@+id/timeleft"

                style="@style/textStyleWhiteOutline"
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"

                android:fontFamily="@font/woodstick"
                android:gravity="center"
                android:text="99:99"
                android:textSize="@dimen/text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:layout_weight="1"

            android:gravity="center"

            android:orientation="vertical">

            <TextView
                android:id="@+id/textView5"
                style="@style/textStyleWhiteOutline"
                android:layout_width="match_parent"

                android:layout_height="wrap_content"

                android:gravity="center"
                android:text="@string/text_game_header_score"
                android:textSize="@dimen/smallText" />

            <TextView
                android:id="@+id/score"
                style="@style/textStyleWhiteOutline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="5dp"

                android:fontFamily="@font/woodstick"
                android:gravity="center"
                android:text="999"
                android:textSize="@dimen/text" />
        </LinearLayout>
    </LinearLayout>

    <GridView
        android:id="@+id/grid_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"

        android:horizontalSpacing="8dp"
        android:verticalSpacing="8dp"
        android:padding="4dp"
        android:numColumns="3"

        android:layout_marginVertical="24dp"
        android:layout_marginHorizontal="12dp"

        app:layout_constraintTop_toBottomOf="@id/gameHeader"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        />
</androidx.constraintlayout.widget.ConstraintLayout>